# midnight

./: .gitignore  CMakeLists.txt  README.md
assets/: README.md
assets/shaders/: plane.vert  solid_blue.frag  solid_green.frag
assets/tilesets/basic_village/: SOURCE.md
shaders/: triangle.frag  triangle.vert
src/: main.cpp  main_client.cpp
src/gfx/: buffer.cpp  buffer.hpp  context.cpp  context.hpp  pipeline.cpp  pipeline.hpp
src/midnight/assets/: Png.cpp  Png.hpp  RgbaImage.hpp
src/midnight/core/: Application.cpp  Application.hpp  File.cpp  File.hpp
src/midnight/platform/: SdlContext.cpp  SdlContext.hpp  Window.cpp  Window.hpp
src/midnight/renderer/: Vertex2D.hpp
src/midnight/renderer/vulkan/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrameRenderer.cpp  VulkanFrameRenderer.hpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanSampler.cpp  VulkanSampler.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTextureDescriptor.cpp  VulkanTextureDescriptor.hpp  VulkanTransferContext.cpp  VulkanTransferContext.hpp  VulkanUtils.cpp  VulkanUtils.hpp
tools/: export_context.py
